--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   font-family: "Cinzel", serif;
 }
 html {
-  background-image: url("wallpaper1.jpg");
+  background-image: url("wallpaper.jpg");
   background-repeat: no-repeat;
   background-position: right top;
   background-attachment: fixed;
@@ -49,21 +49,15 @@ h1 {
   font-size: 18px;
   border: solid 1px black;
 }
+
 .style-view {
   text-align: center;
   font-size: 30px;
   color: bold;
   padding-left: 25px;
   padding-right: 25px;
-  /*border-style: ridge;
-  border-width: 5px;
-  border-radius: 20px;
-  border-color: #97723d;
-  background: #bda275;
 }
-#order-search-buttons{
-  display: inline-block;
-}
+
 .for-div {
   display: inline-block;
   background: #bda275;
@@ -85,11 +79,9 @@ h1 {
   font-size: 13px;
   border: solid 1px black;
 }
-
 #compare-champions{
   padding-bottom: 15px;
 }
-
 #div-skill-number{
   height: 150px;
   display: flex;
@@ -98,20 +90,16 @@ h1 {
   background: #bda275;
   border-radius: 10px;
 }
-
 .for-display{
   height: 30px;
 }
-
 #see-data-here-button{
   height: 45px;
   width: 150px;
 }
-
 .for-hover:hover {
  background-color: #34dce8;
 }
-
 .champions-card {
   display: inline-grid;
   border-style: groove;
@@ -123,27 +111,22 @@ h1 {
   font-size: 20px;
   margin-bottom: 10px;
 }
-
 .common-class-for-information {
   margin-top: 0px;
   margin-bottom: 0px;
 }
-
 .common-class-for-alignment {
   text-align: center;
 }
-
 .image {
   align-items: center;
   padding-top: 0%;
   max-width: 304px;
 }
-
 .image-splash {
   margin-block-start: 0px;
   margin-block-end: 0px;
 }
-
 .made-by {
   text-align: center;
   bottom: 0;
@@ -152,7 +135,6 @@ h1 {
   border-radius: 10px;
   background: #ffffff3d;
 }
-
 .insivible-class {
   visibility: hidden;
   display: none;
@@ -177,7 +159,6 @@ iframe{
 #characters-div, #youtube-media{
   background: #bda275c2;
 }
-
 .youtube-box{
   border-style: inset;
   border-color: #34dce8;
@@ -195,13 +176,11 @@ iframe{
   height: 280px;
   width: 500px;
 }
-
 .for-background-text {
   background-color: #bda275;
   border-radius: 10px;
   
 }
-
 #order-search-buttons{
   display: inline-block;
   background: #bda275;
@@ -212,11 +191,10 @@ iframe{
   border-color: #34dce8;
   padding: 10px;
   margin-bottom: 50px;
-
 }
 
 
-/*VERSÃO MOBILE*/
+
 @media only screen and (max-width: 800px) {
   html {
     font-family: "Girassol";
