--- a/src/style.css
+++ b/src/style.css
@@ -62,27 +62,27 @@ h1 {
   display: inline-block;
   background: #bda275;
   font-size: 15px;
+  text-align: center;
   border-style: inset;
   border-width: 4px;
   border-radius: 5px;
   border-color: #34dce8;
-  padding: 5px;
+  padding: 10px;
   margin-bottom: 10px;
 }
-#sort-div{
-  display: flex;
-  width: 262px;
-}
-#send-ordination, #filter-champions, #search-button, #reset-button, #see-data-here-button{
+
+.for-button {
   border-radius: 3px;
   background-color: #bda275;
   font-size: 13px;
   border: solid 1px black;
 }
-#compare-champions{
+
+#compare-champions {
   padding-bottom: 15px;
 }
-#div-skill-number{
+
+#div-skill-number {
   height: 150px;
   display: flex;
   align-items: center;
@@ -90,43 +90,52 @@ h1 {
   background: #bda275;
   border-radius: 10px;
 }
-.for-display{
+
+.for-display {
   height: 30px;
 }
-#see-data-here-button{
+
+#see-data-here-button {
   height: 45px;
   width: 150px;
 }
+
 .for-hover:hover {
- background-color: #34dce8;
+  background-color: #34dce8;
 }
+
 .champions-card {
   display: inline-grid;
   border-style: groove;
   border-width: 4px;
   border-color: #34dce8;
-  background: #d6b569;
+  background: #bda275;
   width: 304px;
   height: 445px;
   font-size: 20px;
   margin-bottom: 10px;
 }
+
 .common-class-for-information {
   margin-top: 0px;
   margin-bottom: 0px;
 }
+
 .common-class-for-alignment {
   text-align: center;
 }
+
 .image {
   align-items: center;
   padding-top: 0%;
   max-width: 304px;
 }
+
 .image-splash {
   margin-block-start: 0px;
   margin-block-end: 0px;
 }
+
 .made-by {
   text-align: center;
   bottom: 0;
@@ -135,53 +144,36 @@ h1 {
   border-radius: 10px;
   background: #ffffff3d;
 }
+
 .insivible-class {
   visibility: hidden;
   display: none;
 }
-.youtube-box{
-  border-style: inset;
-  border-color: #34dce8;
-  display: inline-block;
-  margin-bottom: 10px;
-  background: #d6b569;
-}
-.youtube-info{
-  display: block;
-}
-.youtube-info > p{
-  font-size: 20px;
-}
-iframe{
-  height: 280px;
-  width: 500px;
-}
-#characters-div, #youtube-media{
-  background: #bda275c2;
-}
-.youtube-box{
+
+.youtube-box {
   border-style: inset;
   border-color: #34dce8;
   display: inline-block;
   margin-bottom: 10px;
   background: #bda275;
 }
-.youtube-info{
+.youtube-info {
   display: block;
 }
-.youtube-info > p{
+.youtube-info > p {
   font-size: 20px;
 }
-iframe{
+iframe {
   height: 280px;
   width: 500px;
 }
+
 .for-background-text {
   background-color: #bda275;
   border-radius: 10px;
-  
 }
-#order-search-buttons{
+
+#order-search-buttons {
   display: inline-block;
   background: #bda275;
   font-size: 25px;
@@ -192,8 +184,6 @@ iframe{
   padding: 10px;
   margin-bottom: 50px;
 }
-
-
 
 @media only screen and (max-width: 800px) {
   html {
@@ -248,14 +238,7 @@ iframe{
     width: 269px;
     text-align: center;
   }
-  #sort-div{
-    width: 254px;
-  }
-  #send-ordination, #filter-champions {
-    border-radius: 3px;
-    font-size: 13px;
-    border: solid 1px black;
-  }
+
   .style-view {
     padding: 5px;
   }
@@ -263,25 +246,27 @@ iframe{
     display: inline-block;
     border-style: groove;
     border-width: 4px;
+    border-color: #34dce8;
+    background: #bda275;
     width: 95%;
     height: 90%;
     margin-bottom: 10px;
   }
-  #div-skill-number{
+  #div-skill-number {
     height: 130px;
     display: block;
     align-items: center;
     justify-content: space-evenly;
     padding-bottom: 75px;
   }
-  .for-display{
+  .for-display {
     height: 30px;
   }
   #greater-than {
     margin-bottom: 0px;
   }
 
-  #see-data-here-button{
+  #see-data-here-button {
     height: 45px;
     width: 150px;
   }
@@ -291,15 +276,16 @@ iframe{
     padding-top: 0%;
     max-width: 100%;
   }
-  iframe{
-    height: 200px;
-    width: 300px;
-  }
   .made-by {
     text-align: center;
     bottom: 0;
     position: end;
     width: 100%;
     background: #ffffff3d;
+  }
+
+  iframe {
+    height: 200px;
+    width: 300px;
   }
 }
